Renames route handlers
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>